[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/PlantSelectionMenu.gd" type="Script" id=1]

[node name="PlantSelectionMenu" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="PeashooterButton2" type="Button" parent="HBoxContainer"]
margin_right = 84.0
margin_bottom = 40.0
text = "Peashooter"

[node name="SunflowerButton" type="Button" parent="HBoxContainer"]
margin_left = 88.0
margin_right = 162.0
margin_bottom = 40.0
text = "Sunflower"

[node name="WalnutButton" type="Button" parent="HBoxContainer"]
margin_left = 166.0
margin_right = 223.0
margin_bottom = 40.0
text = "Walnut"
